# sbshell

./: 21sh  CMakeLists.txt  Makefile  README.md  lk.sh
inc/: 21sh.h  structs.h
lib/libft/: Makefile  ft_free_twodm.c  ft_strsplit_two.c  libft.h
src/: main.c
src/cmd/: cmd.c  cmd_cd.c  cmd_echo.c  cmd_env.c
src/core/: btree.c  core.c  execute.c
src/etc/: environ.c  envmanage.c  error.c  history.c  quotes.c  signals.c  utils.c  utils2.c
src/input/: combinations.c  input.c  input2.c  moving.c  qu_deleter.c
src/interface/: term.c  ui.c
