cmake_minimum_required(VERSION 3.9)
project(21sh)

set(CMAKE_CXX_STANDARD 11)

add_executable(21sh
        inc/21sh.h
        inc/structs.h
        lib/libft/count_occ.c
        lib/libft/ft_atoi.c
        lib/libft/ft_bzero.c
        lib/libft/ft_elems.c
        lib/libft/ft_free_twodm.c
        lib/libft/ft_is_prime.c
        lib/libft/ft_is_sort.c
        lib/libft/ft_isalnum.c
        lib/libft/ft_isalpha.c
        lib/libft/ft_isascii.c
        lib/libft/ft_isdigit.c
        lib/libft/ft_isprint.c
        lib/libft/ft_itoa.c
        lib/libft/ft_lstadd.c
        lib/libft/ft_lstdel.c
        lib/libft/ft_lstdelone.c
        lib/libft/ft_lstiter.c
        lib/libft/ft_lstmap.c
        lib/libft/ft_lstnew.c
        lib/libft/ft_memalloc.c
        lib/libft/ft_memccpy.c
        lib/libft/ft_memchr.c
        lib/libft/ft_memcmp.c
        lib/libft/ft_memcpy.c
        lib/libft/ft_memdel.c
        lib/libft/ft_memmove.c
        lib/libft/ft_memset.c
        lib/libft/ft_numlen.c
        lib/libft/ft_occpos.c
        lib/libft/ft_putchar.c
        lib/libft/ft_putchar_fd.c
        lib/libft/ft_putendl.c
        lib/libft/ft_putendl_fd.c
        lib/libft/ft_putnbr.c
        lib/libft/ft_putnbr_fd.c
        lib/libft/ft_puts_except.c
        lib/libft/ft_puts_except_rev.c
        lib/libft/ft_putstr.c
        lib/libft/ft_putstr_fd.c
        lib/libft/ft_realloc.c
        lib/libft/ft_recursive_power.c
        lib/libft/ft_sqrt.c
        lib/libft/ft_strcat.c
        lib/libft/ft_strchr.c
        lib/libft/ft_strclr.c
        lib/libft/ft_strcmp.c
        lib/libft/ft_strcpy.c
        lib/libft/ft_strdel.c
        lib/libft/ft_strdup.c
        lib/libft/ft_strdupch.c
        lib/libft/ft_strequ.c
        lib/libft/ft_striter.c
        lib/libft/ft_striteri.c
        lib/libft/ft_strjoin.c
        lib/libft/ft_strjoin_free.c
        lib/libft/ft_strlcat.c
        lib/libft/ft_strlen.c
        lib/libft/ft_strlench.c
        lib/libft/ft_strmap.c
        lib/libft/ft_strmapi.c
        lib/libft/ft_strncat.c
        lib/libft/ft_strncmp.c
        lib/libft/ft_strncpy.c
        lib/libft/ft_strnequ.c
        lib/libft/ft_strnew.c
        lib/libft/ft_strnstr.c
        lib/libft/ft_strrchr.c
        lib/libft/ft_strsjoin.c
        lib/libft/ft_strsplit.c
        lib/libft/ft_strsplit_two.c
        lib/libft/ft_strstr.c
        lib/libft/ft_strsub.c
        lib/libft/ft_strtrim.c
        lib/libft/ft_swap.c
        lib/libft/ft_swapch.c
        lib/libft/ft_tabputs.c
        lib/libft/ft_tolower.c
        lib/libft/ft_toupper.c
        lib/libft/ft_two_del.c
        lib/libft/get_next_line.c
        lib/libft/get_next_line.h
        lib/libft/isuseragoat.c
        lib/libft/libft.h
        lib/libft/remove_occ.c
        src/cmd/cmd.c
        src/cmd/cmd_cd.c
        src/cmd/cmd_echo.c
        src/cmd/cmd_env.c
        src/core/core.c
        src/core/execute.c
        src/etc/environ.c
        src/etc/envmanage.c
        src/etc/error.c
        src/etc/history.c
        src/etc/quotes.c
        src/etc/signals.c
        src/etc/utils.c
        src/etc/utils2.c
        src/input/input.c
        src/input/input2.c
        src/input/qu_deleter.c
        src/interface/term.c
        src/interface/ui.c
        src/main.c)
